<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.tvs.pgm.threew.mobile</groupId>
  <artifactId>automation-mobile</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>automation-mobile</name>
  <url>http://maven.apache.org</url>
  <dependencies>
        
        <!-- Selenium WebDriver -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>4.16.1</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->


        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>5.0.9</version> <!-- Use latest stable version -->
        </dependency>


        <!-- Appium Java Client -->
        <dependency>
            <groupId>io.appium</groupId>
            <artifactId>java-client</artifactId>
            <version>9.0.0</version>
        </dependency>

        <!-- TestNG for Testing -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.8.0</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>  <!-- Use the latest version -->
            <scope>provided</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
<dependency>
    <groupId>com.aventstack</groupId>
    <artifactId>extentreports</artifactId>
    <version>5.1.1</version>
</dependency>


       


    </dependencies>
    <!-- Build Configuration -->
    <build>
        <plugins>
            <!-- Set Java Version -->
            <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
            <source>19</source>  <!-- or your specific Java version -->
            <target>19</target>  <!-- or your specific Java version -->
            <compilerArgs>
                <arg>--add-exports</arg>
                <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                <arg>--add-exports</arg>
                <arg>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                <!-- Add the rest of the arguments here -->
            </compilerArgs>
        </configuration>
    </plugin>

            <plugin>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok-maven-plugin</artifactId>
                <version>1.18.24.1</version>
            </plugin>


        </plugins>
    </build>
</project>
